2006-07-29  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/animation.h, src/animatedsprite.cpp: Moved included from header
	to source file.

2006-07-28  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/npc.cpp, src/player.cpp, src/animatedsprite.h, src/animation.h,
	src/being.cpp, src/main.cpp, src/monster.cpp, src/animatedsprite.cpp,
	src/animation.cpp, src/Makefile.am, src/being.h: Moved AnimatedSprite
	into its own files, removed useless includes.
	* src/engine.cpp: Removed an unused var.

2006-07-26  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/sprites/Makefile.am, data/graphics/tiles/Makefile.am,
	data/maps/Makefile.am, data/maps/new_13-1.tmx.gz: Added map with inside
	of snow village buildings and fixed makefiles.
	* src/being.cpp, src/being.h, src/player.cpp: Fixed direction and
	action issues when changing appeareance, frames are still out of sync.
	* data/maps/Makefile.am, data/maps/new_14-1.tmx.gz,
	data/maps/new_9-1.tmx.gz: Added new woodland map by Crush and fixed
	connection with the old one.

2006-07-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/maps/new_4-1.tmx.gz: Fixes to the collision layer.

2006-07-26  Frode Lindeijer  <f.lindeijer@gmail.com>

	* data/graphics/tiles/snowset.png, data/graphics/tiles/snow_x2.png,
	data/graphics/tiles/snow_x3.png: Moved the lamppost, the rock and the
	bench to seperate tall tilebitmaps.
	* data/maps/new_11-1.tmx.gz: Improved the snow village map, main
	changes are that the player can now walk better behind houses,
	lampposts, rocks and benches.
	* data/graphics/sprites/item003.png, data/graphics/sprites/item003.xml:
	Added the leather shirt

2006-07-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp: Fixed updating on Windows.

2006-07-24  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp: Fixed the loading of updates and made skipping the
	update process also skip the loading of updates.

2006-07-24  Björn Steinbrink  <B.Steinbrink@gmx.de>
